# VM2dPLS

./: LICENSE  setup.cfg
src/VM2dPLS/: core.py  data.py  io.py  least_squares.py  utility.py
tests/: 01_loading_ZF.py  02_parser_loading.py
