[metadata]
name = VM2dPLS-pkg-NixtonM
version = 0.0.1
author = Nicholas Meyer
author_email = nixton.meyer@gmail.com
description = A toolbox for Vibration Monitoring of building and infrastructures using 2D Profile Laser Scanners
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/NixtonM/VM2dPLS
project_urls =
    Bug Tracker = https://github.com/NixtonM/VM2dPLS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src